fix invisible scrollbar issue with Safari

--- a/eDAL-MetaDataAPI/src/main/resources/de/ipk_gatersleben/bit/bi/edal/primary_data/css/content.css
+++ b/eDAL-MetaDataAPI/src/main/resources/de/ipk_gatersleben/bit/bi/edal/primary_data/css/content.css
@@ -241,14 +241,36 @@ a.edal-detail-quote-btn {
 
 
 
-
-#edal-detail-directory-table-wrapper {
-    max-width:800px;
+.edal-detail-directory-table-wrapper {
+    /*max-width:800px;*/
+    width: 800px;
     padding-left:30px;
     padding-right:20px;
-    max-height:260px;
+    /*max-height:260px;*/
     overflow-y: auto;
+    height: 260px;
 }
+
+.edal-detail-directory-table-wrapper::-webkit-scrollbar {
+    -webkit-appearance: none;
+    width: 7px;
+}
+.edal-detail-directory-table-wrapper::-webkit-scrollbar-thumb {
+    border-radius: 4px;
+    background-color: rgba(0,0,0,.5);
+    box-shadow: 0 0 1px rgba(255,255,255,.5);
+}
+
+.scrollbarfix {
+    max-width:800px;
+    max-height:260px;
+    height: unset;
+    width: unset;
+}
+
+
+
+
 
 #edal-detail-directory-table {
     width: 100%;
